--- a/Frontend/react-tesla-rent/package.json
+++ b/Frontend/react-tesla-rent/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^5.14.13",
     "@mui/x-date-pickers": "^6.16.2",
     "dayjs": "^1.11.10",
+    "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-tooltip": "^5.21.5"
+    "react-tooltip": "^5.21.5",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
