Reservation summary frontend done

--- a/Frontend/react-tesla-rent/package.json
+++ b/Frontend/react-tesla-rent/package.json
@@ -16,6 +16,8 @@
     "@mui/x-date-pickers": "^6.16.2",
     "dayjs": "^1.11.10",
     "immer": "^10.0.3",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-tooltip": "^5.21.5",
